Fix section title color visibility - change to black

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -568,7 +568,7 @@ h4 {
 .section-title {
   text-align: center;
   margin-bottom: 3rem;
-  color: white;
+  color: black;
 }
 
 /* Features Section */
